# fibkit2.1.0

./: LICENSE  README.md
.github/workflows/: ci.yml
fibkit-2.1.0/: CHANGELOG.md  README.md  pyproject.toml
fibkit-2.1.0/src/fibkit/: __init__.py  cli.py  core.py  linrec.py
fibkit-2.1.0/tests/: test_cli.py  test_core.py
