[project]
name = "fibkit"
version = "2.1.0"
description = "Engineering-grade Fibonacci & Lucas toolkit: fast-doubling exact ints, modular Fibonacci, Pisano periods, CLI, and general linear recurrences."
authors = [{ name = "You", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/SaridakisStamatisChristos/fibkit-2.1.0"
Repository = "https://github.com/y/fibkit-2.1.0"

[project.scripts]
fibkit = "fibkit.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
